@@ -167,6 +167,14 @@ Link ExampleLink::chen() {
         { 17, -10, 18, -11, 19, -12, 20, -9 });
 }
 
+Link ExampleLink::virtualTrefoil() {
+    return Link::fromData({ +1, +1 }, { 1, -2, -1, 2 });
+}
+
+Link ExampleLink::kishino() {
+    return Link::fromData({ -1, +1, -1, +1 }, { 1, -2, -1, 2, 3, -4, -3, 4 });
+}
+
 SpatialLink ExampleLink::spatialTrefoil() {
     // Note: we could happily remove the second and fourth columns; the
     // reason we keep them is to add a bend to the arcs and make everything
