@@ -60,6 +60,9 @@ void addExampleLink(pybind11::module_& m) {
         .def_static("torus", &ExampleLink::torus, rdoc::torus)
         .def_static("gst", &ExampleLink::gst, rdoc::gst)
         .def_static("chen", &ExampleLink::chen, rdoc::chen)
+        .def_static("virtualTrefoil", &ExampleLink::virtualTrefoil,
+            rdoc::virtualTrefoil)
+        .def_static("kishino", &ExampleLink::kishino, rdoc::kishino)
         .def_static("spatialTrefoil", &ExampleLink::spatialTrefoil,
             rdoc::spatialTrefoil)
         .def_static("spatialHopf", &ExampleLink::spatialHopf, rdoc::spatialHopf)
